Base64Kit去掉java 6、7兼容代码